Added structural toString method to inductive types Added theoretical type inference rules Fixed typing of inductive types several other bug fixes

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ src/test/
 target/
 output.jar
 Test.s
+theory/inference_rules.aux
+theory/inference_rules.log
+theory/inference_rules.pdf
+theory/inference_rules.synctex.gz
