--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ output/
 src/test/
 target/
 output.jar
-Test.s
+Test.sl
 theory/inference_rules.aux
 theory/inference_rules.log
 theory/inference_rules.pdf
